--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="book_desc">作者:%1$s |分类: %2$s</string>
     <string name="book_detail_author">作者:%s</string>
     <string name="book_detail_state">状态:%s</string>
+
+    <string name="weather_wendu">%1$s &#160; &#160;%2$s~%3$s</string>
+
+    <string name="weather_shidu_pm">湿度 &#160;%1$s&#160; PM&#160; %2$d</string>
 </resources>
